--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,28 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+}
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
+
     defaultConfig {
         applicationId "id.frogobox.footballapps"
-        minSdkVersion 15
-        targetSdkVersion 29
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
+
+        multiDexEnabled true
+        
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
 
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,14 +32,34 @@ android {
             ext.alwaysUpdateBuildId = false
         }
     }
+
+    buildFeatures {
+        viewBinding true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_11.toString()
+        useIR = true
+    }
+
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
+
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0-alpha01'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
 
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation "org.jetbrains.anko:anko-appcompat-v7-commons:0.10.8"
@@ -39,34 +67,26 @@ dependencies {
     implementation "org.jetbrains.anko:anko-design:0.10.8"
     implementation "org.jetbrains.anko:anko-design-coroutines:0.10.8"
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-
-    implementation 'com.google.android.material:material:1.2.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.4.0-alpha03'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.android.material:material:1.5.0-alpha03'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
-    testImplementation 'org.mockito:mockito-core:2.23.0'
-    testImplementation "org.mockito:mockito-inline:2.23.0"
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.3.0-alpha03'
-    androidTestImplementation 'androidx.test:rules:1.3.0-alpha03'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha03'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    androidTestImplementation('androidx.test.espresso:espresso-contrib:3.1.0-alpha4') {
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude group: 'com.android.support', module: 'design'
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-    }
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.9.0'
+    testImplementation "org.mockito:mockito-inline:3.9.0"
+    androidTestImplementation 'androidx.test:runner:1.4.1-alpha01'
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha01'
 
-
-}
-
-androidExtensions {
-    experimental = true
 }
