--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".views.activities.MainActivity"
+            android:name=".mvp.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,15 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.activities.DetailTeamActivity"/>
-        <activity android:name=".views.activities.DetailMatchActivity"/>
-        <activity android:name=".views.activities.DetailPlayerActivity"/>
+        <activity android:name=".mvp.detail.DetailTeamActivity" />
         <activity
-            android:name=".views.activities.SearchMatchActivity"
-            android:theme="@style/AppThemeNoBar"/>
-        <activity
-            android:name=".views.activities.SearchTeamActivity"
-            android:theme="@style/AppThemeNoBar"/>
+            android:name=".mvp.search.SearchTeamActivity"
+            android:theme="@style/AppThemeNoBar" />
     </application>
 
 </manifest>
